@@ -43,3 +43,4 @@
 20100426 1.50 &choose supports mouse !! and utf8 clues supported
 20100430 1.51 bug fixed: &ask accepts spaces
 20100501 1.52 disable debugging :-)
+20100502 1.53 TermClui.py does stty sane on return; bug fixed in audio_stuff
